package server.models;

public enum SplitType {
    FREESPLIT,ITEMSPLIT,EQUALSPLIT
}
